--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VRIANE_JANNICE</title>
+    <title>VRIANE_JANNICE🤍>>>></title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide@3.7.1/dist/glide.min.js"></script>
@@ -160,7 +160,7 @@
                 <div class="sidebar__newletter">
                     <h1>Saluuutt, je suis Ariane_Jannice</h1>
                     <div class="sidebar__newletter--action">
-                        <input type="text" placeholder="Laissez moi un message ✨" class="sidebar__newletter--action__input">
+                        <input type="text" id="WhatsAppMessage" placeholder="Laissez moi un message ✨" class="sidebar__newletter--action__input">
                         <button type="submit" class="sidebar__newletter--action__send" >Envoyer</button>
                     </div>
                 </div>
@@ -238,6 +238,24 @@
         document.querySelector(".menu-btn").addEventListener("click",function(){
             document.querySelector(".menu-items").classList.toggle("show-menu");
         })
+      </script>
+      <script>
+        document.addEventListener("DOMContentLoaded",function(){
+            document.querySelector(".sidebar__newletter--action_send").addEventListener("click",function(event){
+                event.preventDefault();
+
+                let message=document.getElementById("whatsappMessage").value.trim();
+
+                if (message===""){
+                    alert("Veuillez entrer un message.");
+                    return
+                }
+
+                let phoneNumber = "2250102745429";
+                let whatsappURL='https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}';
+                window.open(whatsappURL,"_blank");
+            });
+        });
       </script>
     
 </body>
